src/styles/mixins/util.scss
@import "../variablesSCSS";

@mixin onAndroid() {
  :global(body.android) & {
    @content
  }
}

@mixin onSmallScreens() {
  @media (max-width: $bpMobile -1) {
    @content
  }
}

@mixin onNonMobileScreens() {
  @media (min-width: $bpMobile) {
    @content
  }
}


@mixin inDarkMode() {
  :global(#minded-6622.minded-6622-dark) {
    @content
  }
}

